compiler/src/parser/EzLangParser.py
# Generated from grammar/EzLang.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class EzLangParser ( Parser ):

    grammarFileName = "EzLang.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'let'", "'const'", "'static'", "'struct'", 
                     "'type'", "'declare'", "'loop'", "'break'", "'continue'", 
                     "'import'", "'export'", "'from'", "'match'", "'catch'", 
                     "'throw'", "'flow'", "'parallel'", "'rp'", "'wp'", 
                     "'typeof'", "'return'", "'in'", "'for'", "'as'", "'extern'", 
                     "'I8'", "'I32'", "'I64'", "'U8'", "'U32'", "'U64'", 
                     "'F32'", "'F64'", "'Str'", "'Bool'", "'Void'", "'Vec'", 
                     "'List'", "'linux'", "'macos'", "'windows'", "'android'", 
                     "'ios'", "'emcc'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'('", "')'", 
                     "'{'", "'}'", "'['", "']'", "'<'", "'>'", "';'", "':'", 
                     "','", "'.'", "'='", "'?'", "'!'", "'@'", "'#'", "'&'", 
                     "'|'", "'^'", "'~'", "'+'", "'-'", "'*'", "'/'", "'%'", 
                     "'=='", "'!='", "'<='", "'>='", "'<<'", "'&&'", "'||'", 
                     "'+='", "'-='", "'*='", "'/='", "'%='", "'&='", "'|='", 
                     "'^='", "'<<='", "'>>='", "'=>'", "'->'", "'...'" ]

    symbolicNames = [ "<INVALID>", "LET", "CONST", "STATIC", "STRUCT", "TYPE", 
                      "DECLARE", "LOOP", "BREAK", "CONTINUE", "IMPORT", 
                      "EXPORT", "FROM", "MATCH", "CATCH", "THROW", "FLOW", 
                      "PARALLEL", "RP", "WP", "TYPEOF", "RETURN", "IN", 
                      "FOR", "AS", "EXTERN", "I8", "I32", "I64", "U8", "U32", 
                      "U64", "F32", "F64", "STR", "BOOL", "VOID", "VEC", 
                      "LIST", "LINUX", "MACOS", "WINDOWS", "ANDROID", "IOS", 
                      "EMCC", "BOOL_LITERAL", "INTEGER_LITERAL", "FLOAT_LITERAL", 
                      "STRING_LITERAL", "TYPE_IDENTIFIER", "VAR_IDENTIFIER", 
                      "LPAREN", "RPAREN", "LBRACE", "RBRACE", "LBRACK", 
                      "RBRACK", "LANGLE", "RANGLE", "SEMI", "COLON", "COMMA", 
                      "DOT", "ASSIGN", "QUESTION", "BANG", "AT", "HASH", 
                      "AMPERSAND", "PIPE", "CARET", "TILDE", "PLUS", "MINUS", 
                      "STAR", "SLASH", "PERCENT", "EQ", "NE", "LE", "GE", 
                      "SHL", "AND", "OR", "PLUS_ASSIGN", "MINUS_ASSIGN", 
                      "STAR_ASSIGN", "SLASH_ASSIGN", "PERCENT_ASSIGN", "AMPERSAND_ASSIGN", 
                      "PIPE_ASSIGN", "CARET_ASSIGN", "SHL_ASSIGN", "SHR_ASSIGN", 
                      "FAT_ARROW", "THIN_ARROW", "ELLIPSIS", "LINE_COMMENT", 
                      "BLOCK_COMMENT", "WS" ]

    RULE_compilationUnit = 0
    RULE_declaration = 1
    RULE_variableDecl = 2
    RULE_lockPrefix = 3
    RULE_qualifiedVarName = 4
    RULE_decorator = 5
    RULE_structDecl = 6
    RULE_structMember = 7
    RULE_structSpread = 8
    RULE_structField = 9
    RULE_structMethod = 10
    RULE_typeAliasDecl = 11
    RULE_typeShape = 12
    RULE_typeShapeMember = 13
    RULE_typeShapeSpread = 14
    RULE_functionDecl = 15
    RULE_importDecl = 16
    RULE_importSpecList = 17
    RULE_importSpec = 18
    RULE_importName = 19
    RULE_exportDecl = 20
    RULE_externDecl = 21
    RULE_targetPlatform = 22
    RULE_declareDecl = 23
    RULE_type_ = 24
    RULE_baseType = 25
    RULE_genericParams = 26
    RULE_genericArgs = 27
    RULE_typeList = 28
    RULE_functionType = 29
    RULE_paramTypeList = 30
    RULE_paramType = 31
    RULE_expression = 32
    RULE_assignmentExpression = 33
    RULE_assignmentOperator = 34
    RULE_pipelineExpression = 35
    RULE_conditionalExpression = 36
    RULE_rangeExpression = 37
    RULE_orExpression = 38
    RULE_andExpression = 39
    RULE_equalityExpression = 40
    RULE_relationalExpression = 41
    RULE_bitOrExpression = 42
    RULE_bitXorExpression = 43
    RULE_bitAndExpression = 44
    RULE_shiftExpression = 45
    RULE_shiftOperator = 46
    RULE_additiveExpression = 47
    RULE_multiplicativeExpression = 48
    RULE_unaryExpression = 49
    RULE_postfixExpression = 50
    RULE_primaryExpression = 51
    RULE_typeofExpr = 52
    RULE_literal = 53
    RULE_namedArgList = 54
    RULE_callArg = 55
    RULE_namedArg = 56
    RULE_pipelineArgList = 57
    RULE_pipelineArg = 58
    RULE_structLiteral = 59
    RULE_structFieldInitList = 60
    RULE_structFieldInit = 61
    RULE_dictLiteral = 62
    RULE_dictFieldSep = 63
    RULE_dictField = 64
    RULE_dictKey = 65
    RULE_arrayLiteral = 66
    RULE_vecLiteral = 67
    RULE_expressionList = 68
    RULE_markupLiteral = 69
    RULE_markupAttr = 70
    RULE_markupChild = 71
    RULE_functionLiteral = 72
    RULE_functionSignature = 73
    RULE_paramList = 74
    RULE_param = 75
    RULE_block = 76
    RULE_flowBlock = 77
    RULE_parallelBlock = 78
    RULE_matchBlock = 79
    RULE_matchClause = 80
    RULE_catchBlock = 81
    RULE_ifLikeExpr = 82
    RULE_loopExpr = 83
    RULE_statement = 84
    RULE_expressionStatement = 85
    RULE_returnStatement = 86
    RULE_breakStatement = 87
    RULE_continueStatement = 88
    RULE_throwStatement = 89

    ruleNames =  [ "compilationUnit", "declaration", "variableDecl", "lockPrefix", 
                   "qualifiedVarName", "decorator", "structDecl", "structMember", 
                   "structSpread", "structField", "structMethod", "typeAliasDecl", 
                   "typeShape", "typeShapeMember", "typeShapeSpread", "functionDecl", 
                   "importDecl", "importSpecList", "importSpec", "importName", 
                   "exportDecl", "externDecl", "targetPlatform", "declareDecl", 
                   "type_", "baseType", "genericParams", "genericArgs", 
                   "typeList", "functionType", "paramTypeList", "paramType", 
                   "expression", "assignmentExpression", "assignmentOperator", 
                   "pipelineExpression", "conditionalExpression", "rangeExpression", 
                   "orExpression", "andExpression", "equalityExpression", 
                   "relationalExpression", "bitOrExpression", "bitXorExpression", 
                   "bitAndExpression", "shiftExpression", "shiftOperator", 
                   "additiveExpression", "multiplicativeExpression", "unaryExpression", 
                   "postfixExpression", "primaryExpression", "typeofExpr", 
                   "literal", "namedArgList", "callArg", "namedArg", "pipelineArgList", 
                   "pipelineArg", "structLiteral", "structFieldInitList", 
                   "structFieldInit", "dictLiteral", "dictFieldSep", "dictField", 
                   "dictKey", "arrayLiteral", "vecLiteral", "expressionList", 
                   "markupLiteral", "markupAttr", "markupChild", "functionLiteral", 
                   "functionSignature", "paramList", "param", "block", "flowBlock", 
                   "parallelBlock", "matchBlock", "matchClause", "catchBlock", 
                   "ifLikeExpr", "loopExpr", "statement", "expressionStatement", 
                   "returnStatement", "breakStatement", "continueStatement", 
                   "throwStatement" ]

    EOF = Token.EOF
    LET=1
    CONST=2
    STATIC=3
    STRUCT=4
    TYPE=5
    DECLARE=6
    LOOP=7
    BREAK=8
    CONTINUE=9
    IMPORT=10
    EXPORT=11
    FROM=12
    MATCH=13
    CATCH=14
    THROW=15
    FLOW=16
    PARALLEL=17
    RP=18
    WP=19
    TYPEOF=20
    RETURN=21
    IN=22
    FOR=23
    AS=24
    EXTERN=25
    I8=26
    I32=27
    I64=28
    U8=29
    U32=30
    U64=31
    F32=32
    F64=33
    STR=34
    BOOL=35
    VOID=36
    VEC=37
    LIST=38
    LINUX=39
    MACOS=40
    WINDOWS=41
    ANDROID=42
    IOS=43
    EMCC=44
    BOOL_LITERAL=45
    INTEGER_LITERAL=46
    FLOAT_LITERAL=47
    STRING_LITERAL=48
    TYPE_IDENTIFIER=49
    VAR_IDENTIFIER=50
    LPAREN=51
    RPAREN=52
    LBRACE=53
    RBRACE=54
    LBRACK=55
    RBRACK=56
    LANGLE=57
    RANGLE=58
    SEMI=59
    COLON=60
    COMMA=61
    DOT=62
    ASSIGN=63
    QUESTION=64
    BANG=65
    AT=66
    HASH=67
    AMPERSAND=68
    PIPE=69
    CARET=70
    TILDE=71
    PLUS=72
    MINUS=73
    STAR=74
    SLASH=75
    PERCENT=76
    EQ=77
    NE=78
    LE=79
    GE=80
    SHL=81
    AND=82
    OR=83
    PLUS_ASSIGN=84
    MINUS_ASSIGN=85
    STAR_ASSIGN=86
    SLASH_ASSIGN=87
    PERCENT_ASSIGN=88
    AMPERSAND_ASSIGN=89
    PIPE_ASSIGN=90
    CARET_ASSIGN=91
    SHL_ASSIGN=92
    SHR_ASSIGN=93
    FAT_ARROW=94
    THIN_ARROW=95
    ELLIPSIS=96
    LINE_COMMENT=97
    BLOCK_COMMENT=98
    WS=99

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class CompilationUnitContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(EzLangParser.EOF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(EzLangParser.StatementContext)
            else:
                return self.getTypedRuleContext(EzLangParser.StatementContext,i)


        def declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(EzLangParser.DeclarationContext)
            else:
                return self.getTypedRuleContext(EzLangParser.DeclarationContext,i)


        def externDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(EzLangParser.ExternDeclContext)
            else:
                return self.getTypedRuleContext(EzLangParser.ExternDeclContext,i)


        def getRuleIndex(self):
            return EzLangParser.RULE_compilationUnit

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCompilationUnit" ):
                listener.enterCompilationUnit(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCompilationUnit" ):
                listener.exitCompilationUnit(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCompilationUnit" ):
                return visitor.visitCompilationUnit(self)
            else:
                return visitor.visitChildren(self)




    def compilationUnit(self):

        localctx = EzLangParser.CompilationUnitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_compilationUnit)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 185
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 193620149331295230) != 0) or ((((_la - 64)) & ~0x3f) == 0 and ((1 << (_la - 64)) & 1935) != 0):
                self.state = 183
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
                if la_ == 1:
                    self.state = 180
                    self.statement()
                    pass

                elif la_ == 2:
                    self.state = 181
                    self.declaration()
                    pass

                elif la_ == 3:
                    self.state = 182
                    self.externDecl()
                    pass


                self.state = 187
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 188
            self.match(EzLangParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def functionDecl(self):
            return self.getTypedRuleContext(EzLangParser.FunctionDeclContext,0)


        def variableDecl(self):
            return self.getTypedRuleContext(EzLangParser.VariableDeclContext,0)


        def structDecl(self):
            return self.getTypedRuleContext(EzLangParser.StructDeclContext,0)


        def typeAliasDecl(self):
            return self.getTypedRuleContext(EzLangParser.TypeAliasDeclContext,0)


        def importDecl(self):
            return self.getTypedRuleContext(EzLangParser.ImportDeclContext,0)


        def exportDecl(self):
            return self.getTypedRuleContext(EzLangParser.ExportDeclContext,0)


        def declareDecl(self):
            return self.getTypedRuleContext(EzLangParser.DeclareDeclContext,0)


        def getRuleIndex(self):
            return EzLangParser.RULE_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaration" ):
                listener.enterDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaration" ):
                listener.exitDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaration" ):
                return visitor.visitDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def declaration(self):

        localctx = EzLangParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declaration)
        try:
            self.state = 197
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 190
                self.functionDecl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 191
                self.variableDecl()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 192
                self.structDecl()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 193
                self.typeAliasDecl()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 194
                self.importDecl()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 195
                self.exportDecl()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 196
                self.declareDecl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariableDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def qualifiedVarName(self):
            return self.getTypedRuleContext(EzLangParser.QualifiedVarNameContext,0)


        def LET(self):
            return self.getToken(EzLangParser.LET, 0)

        def CONST(self):
            return self.getToken(EzLangParser.CONST, 0)

        def STATIC(self):
            return self.getToken(EzLangParser.STATIC, 0)

        def decorator(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(EzLangParser.DecoratorContext)
            else:
                return self.getTypedRuleContext(EzLangParser.DecoratorContext,i)


        def lockPrefix(self):
            return self.getTypedRuleContext(EzLangParser.LockPrefixContext,0)


        def COLON(self):
            return self.getToken(EzLangParser.COLON, 0)

        def type_(self):
            return self.getTypedRuleContext(EzLangParser.Type_Context,0)


        def ASSIGN(self):
            return self.getToken(EzLangParser.ASSIGN, 0)

        def expression(self):
            return self.getTypedRuleContext(EzLangParser.ExpressionContext,0)


        def SEMI(self):
            return self.getToken(EzLangParser.SEMI, 0)

        def getRuleIndex(self):
            return EzLangParser.RULE_variableDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariableDecl" ):
                listener.enterVariableDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariableDecl" ):
                listener.exitVariableDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariableDecl" ):
                return visitor.visitVariableDecl(self)
            else:
                return visitor.visitChildren(self)




    def variableDecl(self):

        localctx = EzLangParser.VariableDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_variableDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 202
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==66:
                self.state = 199
                self.decorator()
                self.state = 204
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 206
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==18 or _la==19:
                self.state = 205
                self.lockPrefix()


            self.state = 208
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 14) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 209
            self.qualifiedVarName()
            self.state = 212
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==60:
                self.state = 210
                self.match(EzLangParser.COLON)
                self.state = 211
                self.type_(0)


            self.state = 216
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==63:
                self.state = 214
                self.match(EzLangParser.ASSIGN)
                self.state = 215
                self.expression()


            self.state = 219
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==59:
                self.state = 218
                self.match(EzLangParser.SEMI)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LockPrefixContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RP(self):
            return self.getToken(EzLangParser.RP, 0)

        def WP(self):
            return self.getToken(EzLangParser.WP, 0)
